Phase 1: Implement global input tracking
- Added uiohook-napi for keyboard and mouse tracking
- Created InputTracker module with event counting
- Set up IPC communication between main and renderer processes
- Added live stats overlay showing keypresses and clicks
- Implemented platform-specific fallback handling
- Added INPUT_TRACKING_README.md with setup instructions
- Meowchi reacts with happy face every 50 actions

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -9,6 +9,16 @@
 <body>
   <div id="meowchi-container">
     <div id="meowchi-sprite">🐱</div>
+    <div id="stats-overlay">
+      <div class="stat-item">
+        <span class="stat-icon">⌨️</span>
+        <span id="keypress-count">0</span>
+      </div>
+      <div class="stat-item">
+        <span class="stat-icon">🖱️</span>
+        <span id="click-count">0</span>
+      </div>
+    </div>
   </div>
   <script src="app.js"></script>
 </body>
