Phase 5: Implement Save System, Error Handling, and Packaging
- Created SaveManager with lowdb for persistent storage
- Auto-save every 60 seconds (30s in TEST_MODE)
- Save/load all game state: pet stats, inventory, evolution, progress
- Data validation and corruption recovery with backups
- Global error handlers with crash logging to file
- Reset functionality in Evolution Journal
- Added About section with version info
- Created app icon (SVG format)
- Configured electron-builder for cross-platform builds
- Added npm scripts for building Windows/macOS/Linux
- Updated README with full documentation
- App now remembers all progress between sessions

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -93,7 +93,17 @@
       <div id="evolution-history" class="evolution-history">
         <!-- Evolution history -->
       </div>
-      <button id="close-journal" class="action-btn">✖️ Close</button>
+      <div class="panel-divider"></div>
+      <div class="about-section">
+        <h4>About Meowchi</h4>
+        <p class="about-text">Version 0.1.0 - Made with 💖 by developtheweb</p>
+        <p class="about-text">Your productivity companion that grows with you!</p>
+      </div>
+      <div class="panel-divider"></div>
+      <div class="journal-actions">
+        <button id="reset-btn" class="action-btn reset-btn">🔄 Reset Meowchi</button>
+        <button id="close-journal" class="action-btn">✖️ Close</button>
+      </div>
     </div>
     
     <!-- Evolution Dialog -->
