Add close button to pet panel
- Add close button at bottom of pet panel for better UX
- Style button with subtle red hover effect
- Add click handler to close panel when button is clicked

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -68,6 +68,8 @@
         <button id="inventory-btn" class="action-btn">🎩 Hats</button>
         <button id="journal-btn" class="action-btn">📖 Journal</button>
       </div>
+      
+      <button id="close-pet-panel" class="action-btn">✖️ Close</button>
     </div>
     
     <!-- Inventory Panel -->
